# interedy

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build.yml
.workbuddy/memory/: 2026-04-11.md  MEMORY.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/api/: redis.ts
src/components/: AboutDialog.tsx  AddKeyModal.tsx  KeyDetailPanel.tsx  KeyTree.tsx  ResizeHandle.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx  UpdateDialog.tsx
src/contexts/: ThemeContext.tsx
src/i18n/: index.tsx
src/i18n/locales/: en-US.ts  zh-CN.ts
src/styles/: index.css
src/types/: index.ts
